# passgen

./: AUTHORS  BUGS  COPYING  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  configure.ac  configure.in
doc/: Makefile.am  passgen.1  passgen.conf.5
etc/: Makefile.am  passgen.conf.in
src/: Makefile.am  passgen.c  passgen.h  passgen_conf.c  passgen_conf.h  passgen_datastructures.h
